--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>BTS – A Safe Space</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- Comfort Mode Button -->
+  <button id="comfortBtn">Enter Comfort Mode 💜</button>
+
+  <!-- HERO -->
+  <header class="hero reveal">
+    <h1>BTS</h1>
+    <p class="tagline">Not just music — a place that feels safe.</p>
+  </header>
+
+  <!-- SAFE SPACE -->
+  <section class="section reveal">
+    <h2>BTS as a Safe Space</h2>
+    <p>
+      BTS has been more than a group for me. Their words felt like reassurance
+      during moments when silence felt overwhelming.
+    </p>
+  </section>
+
+  <!-- MESSAGES -->
+  <section class="section reveal">
+    <h2>Messages That Stayed</h2>
+    <p id="quote">Click below when you need reassurance.</p>
+    <button id="quoteBtn">I need reassurance</button>
+  </section>
+
+  <!-- MEMBERS -->
+  <section class="section reveal">
+    <h2>Seven Voices, One Comfort</h2>
+
+    <div class="members">
+      <div class="member-card">RM</div>
+      <div class="member-card">Jin</div>
+      <div class="member-card">SUGA</div>
+      <div class="member-card">j-hope</div>
+      <div class="member-card">Jimin</div>
+      <div class="member-card">V</div>
+      <div class="member-card">Jungkook</div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>Thank you for being a safe space 💜</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
 
