--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
   <!-- HERO -->
   <header class="hero reveal">
+    <div class="hero-content">
     <h1>BTS</h1>
     <p class="tagline">Not just music — a place that feels safe.</p>
+    </div>
   </header>
 
   <!-- SAFE SPACE -->
@@ -62,5 +64,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
