--- a/index.html
+++ b/index.html
@@ -41,20 +41,57 @@
     <button id="quoteBtn">I need reassurance</button>
   </section>
 
-  <!-- MEMBERS -->
-  <section class="section reveal">
-    <h2>Seven Voices, One Comfort</h2>
+ <!-- MEMBERS -->
+<section class="section reveal">
+  <h2>Seven Voices, One Comfort</h2>
 
-    <div class="members">
-      <div class="member-card">RM</div>
-      <div class="member-card">Jin</div>
-      <div class="member-card">SUGA</div>
-      <div class="member-card">j-hope</div>
-      <div class="member-card">Jimin</div>
-      <div class="member-card">V</div>
-      <div class="member-card">Jungkook</div>
+  <div class="members">
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="RM.jpg" alt="RM">
+      <p>RM</p>
+      <span class="emotion">Calm reassurance and thoughtful strength.</span>
     </div>
-  </section>
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="Jin.jpg" alt="Jin">
+      <p>Jin</p>
+      <span class="emotion">Warmth, humor, and quiet comfort.</span>
+    </div>
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="Suga.jpg" alt="SUGA">
+      <p>SUGA</p>
+      <span class="emotion">Honest vulnerability and deep understanding.</span>
+    </div>
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="Jhope.jpg" alt="j-hope">
+      <p>j-hope</p>
+      <span class="emotion">Hope, light, and emotional warmth.</span>
+    </div>
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="Jimin.jpg" alt="Jimin">
+      <p>Jimin</p>
+      <span class="emotion">Gentle care and emotional safety.</span>
+    </div>
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="V.jpg" alt="V">
+      <p>V</p>
+      <span class="emotion">Depth, softness, and healing presence.</span>
+    </div>
+
+    <div class="member-card" onclick="toggleText(this)">
+      <img src="Jungkook.jpg" alt="Jungkook">
+      <p>Jungkook</p>
+      <span class="emotion">Growth, resilience, and encouragement.</span>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <footer>
@@ -64,6 +101,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
