--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="section reveal">
     <h2>Messages That Stayed</h2>
     <p id="quote">Click below when you need reassurance.</p>
-    <button id="quoteBtn">I need reassurance</button>
+    <button id="quoteBtn"> I need reassurance </button>
   </section>
 
  <!-- MEMBERS -->
@@ -51,6 +51,8 @@
       <img src="RM.jpg" alt="RM">
       <p>RM</p>
       <span class="emotion">Calm reassurance and thoughtful strength.</span>
+      <p>Quote: </p>
+      <span class="emotion">No matter who you are, where you’re from, your skin color, gender identity: speak yourself.</span>
     </div>
 
     <div class="member-card" onclick="toggleText(this)">
@@ -101,6 +103,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
