--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
       <img src="RM.jpg" alt="RM">
       <p>RM</p>
       <span class="emotion">Calm reassurance and thoughtful strength.</span>
-      <p>Quote: </p>
-      <span class="emotion">No matter who you are, where you’re from, your skin color, gender identity: speak yourself.</span>
     </div>
 
     <div class="member-card" onclick="toggleText(this)">
@@ -86,7 +84,7 @@
     </div>
 
     <div class="member-card" onclick="toggleText(this)">
-      <img src="Jungkook.jpg" alt="Jungkook">
+      <img src="JK.jpg" alt="Jungkook">
       <p>Jungkook</p>
       <span class="emotion">Growth, resilience, and encouragement.</span>
     </div>
@@ -103,6 +101,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
