--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="member-card" onclick="toggleText(this)">
-      <img src="Jhope.jpg" alt="j-hope">
+      <img src="Jhope.jpg" alt="J-hope">
       <p>j-hope</p>
       <span class="emotion">Hope, light, and emotional warmth.</span>
     </div>
@@ -101,6 +101,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
