--- a/index.html
+++ b/index.html
@@ -21,18 +21,83 @@
   <header class="hero reveal">
     <div class="hero-content">
     <h1>BTS</h1>
-    <p class="tagline">Not just music — a place that feels safe.</p>
+    <p class="tagline">Not just music — a place that feels like <i>home</i>.</p>
     </div>
   </header>
 
-  <!-- SAFE SPACE -->
+  
+<!-- SAFE SPACE -->
+<section class="section reveal">
+  <h2>BTS as a Safe Space</h2>
+
+  <p>
+    During a time when the world felt uncertain and isolating, especially
+    throughout the COVID pandemic, many people were forced to slow down and
+    sit with emotions they had never faced before. In those moments, BTS did
+    not try to dismiss the fear or pretend that everything was normal. Instead,
+    they acknowledged it — openly and honestly.
+  </p>
+
+  <p>
+    When BTS spoke at the United Nations, their message was not about success
+    or perfection, but about listening to yourself, accepting fear, and moving
+    forward at your own pace. Their words resonated with millions of people
+    because they reflected shared human experiences rather than distant ideals.
+  </p>
+
+  <p>
+    BTS became a safe space because they made people feel seen. Through their
+    music, speeches, and actions, they reminded listeners that it was okay to
+    feel lost, to feel tired, and to take life one step at a time. That sense
+    of understanding is what made their presence comforting to so many —
+    including me.
+  </p>
+</section>
+
+
+  <!-- LYRICS THAT FELT LIKE HOME -->
   <section class="section reveal">
-    <h2>BTS as a Safe Space</h2>
-    <p>
-      BTS has been more than a group for me. Their words felt like reassurance
-      during moments when silence felt overwhelming.
-    </p>
-  </section>
+  <h2>Lyrics That Felt Like Home</h2>
+
+  <p>
+    What made me admire BTS deeply was not just their music, but the way their
+    lyrics spoke about things people often struggle to say out loud. Their
+    songs never felt like they were telling listeners to be strong all the
+    time — instead, they acknowledged fear, self-doubt, exhaustion, and the
+    quiet moments of uncertainty that many people carry.
+  </p>
+
+  <p>
+    They spoke openly about ideas that felt comforting yet rarely voiced —
+    that it is okay to not be okay, that it is okay to not have a dream, and
+    that life does not have to follow a timeline set by society. Their words
+    gently reminded listeners that happiness does not come from meeting
+    expectations, but from doing what feels right for yourself, because in
+    the end, you are the one who has to live with your choices.
+  </p>
+
+  <p>
+    During a time when I was mentally struggling, one of their songs,
+    <a href="https://youtu.be/jzHtHAg2igc?si=mwFUoW51bppEXmAh" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   class="song-link">
+  <em>Telepathy</em>
+</a>
+, felt especially comforting. It carried a warmth that
+    felt like someone reaching out and saying they cared, even from a
+    distance. The song did not try to solve anything — it simply stayed,
+    and that presence meant more than advice ever could.
+  </p>
+
+  <p>
+    I admire BTS because their lyrics feel honest rather than perfect. They
+    don’t promise that everything will be okay, but they remind people that
+    they are not alone in how they feel. Over time, those words began to feel
+    like home — a place to return to whenever things felt overwhelming.
+  </p>
+</section>
+
 
   <!-- MESSAGES -->
   <section class="section reveal">
@@ -101,6 +166,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
