--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
   <p>
     I admire BTS because their lyrics feel honest rather than perfect. They
     don’t promise that everything will be okay, but they remind people that
-    they are not alone in how they feel. Over time, those words began to feel
-    like home — a place to return to whenever things felt overwhelming.
+    they are not alone in how they feel. There is this quote by <b>Jungkook</b> the youngest member of the group that says, 
+    <b>“Effort makes you. You will regret someday if you don’t do your best now. Don’t think it’s too late but keep working on it. 
+    It takes time, but there’s nothing that gets worse due to practicing. So practice. You may get depressed, but it’s evidence that you are doing good.”</b> 
+    these words has given me strength and courage to do without thinking about the outcome but to focus on giving my everything and trying.
+    Over time, those words began to feel like home — a place to return to whenever things felt overwhelming.
   </p>
 </section>
 
@@ -106,52 +109,67 @@
     <button id="quoteBtn"> I need reassurance </button>
   </section>
 
- <!-- MEMBERS -->
+  
+ <!-- SEVEN VOICES -->
 <section class="section reveal">
   <h2>Seven Voices, One Comfort</h2>
 
   <div class="members">
 
-    <div class="member-card" onclick="toggleText(this)">
+    <div class="member-voice">
+      <h3>RM</h3>
+      <blockquote>
+        “If you want to love others, I think you should love yourself first.”
+      </blockquote>
       <img src="RM.jpg" alt="RM">
-      <p>RM</p>
-      <span class="emotion">Calm reassurance and thoughtful strength.</span>
     </div>
 
-    <div class="member-card" onclick="toggleText(this)">
+    <div class="member-voice">
+      <h3>Jin</h3>
+      <blockquote>
+        “Even if you’re not perfect, you’re still you — and that’s enough.”
+      </blockquote>
       <img src="Jin.jpg" alt="Jin">
-      <p>Jin</p>
-      <span class="emotion">Warmth, humor, and quiet comfort.</span>
     </div>
 
-    <div class="member-card" onclick="toggleText(this)">
+    <div class="member-voice">
+      <h3>SUGA</h3>
+      <blockquote>
+        “It’s okay if you don’t have a dream. Just being happy is enough.”
+      </blockquote>
       <img src="Suga.jpg" alt="SUGA">
-      <p>SUGA</p>
-      <span class="emotion">Honest vulnerability and deep understanding.</span>
     </div>
 
-    <div class="member-card" onclick="toggleText(this)">
+    <div class="member-voice">
+      <h3>j-hope</h3>
+      <blockquote>
+        ‘I think there’s a beauty in growing old. It’s the times we’re together that matters, not how we look.”
+      </blockquote>
       <img src="Jhope.jpg" alt="J-hope">
-      <p>j-hope</p>
-      <span class="emotion">Hope, light, and emotional warmth.</span>
     </div>
 
-    <div class="member-card" onclick="toggleText(this)">
+    <div class="member-voice">
+      <h3>Jimin</h3>
+      <blockquote>
+        “Go on your path, even if you live for a day.”
+      </blockquote>
       <img src="Jimin.jpg" alt="Jimin">
-      <p>Jimin</p>
-      <span class="emotion">Gentle care and emotional safety.</span>
     </div>
 
-    <div class="member-card" onclick="toggleText(this)">
+    <div class="member-voice">
+      <h3>V</h3>
+      <blockquote>
+        “When things get hard, stop for awhile and look back and see how far you’ve come. Don’t forget how rewarding it is. You are the most beautiful flower, more than anyone else in this world.”
+      </blockquote>
       <img src="V.jpg" alt="V">
-      <p>V</p>
-      <span class="emotion">Depth, softness, and healing presence.</span>
     </div>
 
-    <div class="member-card" onclick="toggleText(this)">
-      <img src="JK.jpg" alt="Jungkook">
-      <p>Jungkook</p>
-      <span class="emotion">Growth, resilience, and encouragement.</span>
+    <div class="member-voice">
+      <h3>Jungkook</h3>
+      <blockquote>
+        “There is no knowing what will come, but hard work will get us somewhere.”
+      </blockquote>
+      <img src="Jungkook.jpg" alt="Jungkook">
     </div>
 
   </div>
@@ -166,6 +184,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
