--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <blockquote>
         “There is no knowing what will come, but hard work will get us somewhere.”
       </blockquote>
-      <img src="Jungkook.jpg" alt="Jungkook">
+      <img src="JK.jpg" alt="Jungkook">
     </div>
 
   </div>
@@ -184,6 +184,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
