--- a/index.html
+++ b/index.html
@@ -103,12 +103,36 @@
 
 
   <!-- MESSAGES -->
-  <section class="section reveal">
-    <h2>Messages That Stayed</h2>
-    <p id="quote">Click below when you need reassurance.</p>
-    <button id="quoteBtn"> I need reassurance </button>
-  </section>
+<section class="section reveal">
+  <h2>Messages That Stayed</h2>
 
+  <p>
+    Some words stayed with me long after the songs ended.
+  </p>
+
+  <p>
+    That it’s okay to move slowly.  
+    That it’s okay to rest without guilt.
+  </p>
+
+  <p>
+    That not having everything figured out doesn’t mean you’re failing.
+  </p>
+
+  <p>
+    That choosing yourself, even quietly, is still choosing yourself.
+  </p>
+
+  <p>
+    And sometimes, just knowing someone understands is enough.
+  </p>
+
+  <p id="quote"><b>Click below when you need reassurance.</b></p>
+    <button id="quoteBtn"> I need reassurance </button>
+</section>
+
+
+  
   
  <!-- SEVEN VOICES -->
 <section class="section reveal">
@@ -184,6 +208,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
