--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 </section>
 
 
+
+  <!-- Words from ARMY -->
+  <section class="section reveal army-section">
+  <h2>Words Left Behind by ARMY</h2>
+
+  <div class="army-quote-box">
+    <p id="armyQuote">
+      “Their music stayed with me when everything else felt distant.”
+    </p>
+  </div>
+</section>
+
+  
   <!-- FOOTER -->
   <footer>
     <p>Thank you for being a safe space 💜</p>
@@ -208,6 +221,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
