--- a/index.html
+++ b/index.html
@@ -205,10 +205,16 @@
   <section class="section reveal army-section">
   <h2>Words Left Behind by ARMY</h2>
 
-  <div class="army-quote-box">
-    <p id="armyQuote">
-      “Their music stayed with me when everything else felt distant.”
-    </p>
+  <div class="army-quote-wrapper">
+    <button class="arrow" id="prevQuote">&#8592;</button>
+
+    <div class="army-quote-box">
+      <p id="armyQuote">
+        “Their music stayed with me when everything else felt distant.”
+      </p>
+    </div>
+
+    <button class="arrow" id="nextQuote">&#8594;</button>
   </div>
 </section>
 
@@ -221,6 +227,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
