--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 <body>
 
-  <!-- Comfort Mode Button -->
-  <button id="comfortBtn">Enter Comfort Mode 💜</button>
+  <!-- Theme Toggle Button -->
+  <button id="themeToggle" class="theme-toggle">🌙</button>
+
 
   <!-- HERO -->
   <header class="hero reveal">
@@ -227,6 +228,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
