--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
   </p>
 
   <p id="quote"><b>Click below when you need reassurance.</b></p>
-    <button id="quoteBtn"> I need reassurance </button>
+    <div class="reassurance-wrap">
+  <button id="quoteBtn" class="reassurance-btn">
+    I need reassurance
+  </button>
+  <p id="quote"></p>
+</div>
 </section>
 
 
@@ -224,6 +229,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
