--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <blockquote>
         “If you want to love others, I think you should love yourself first.”
       </blockquote>
-      <img src="RM.jpg" alt="RM">
+      <img src="images/RM.jpg" alt="RM">
     </div>
 
     <div class="member-voice">
@@ -155,7 +155,7 @@
       <blockquote>
         “Even if you’re not perfect, you’re still you — and that’s enough.”
       </blockquote>
-      <img src="Jin.jpg" alt="Jin">
+      <img src="images/Jin.jpg" alt="Jin">
     </div>
 
     <div class="member-voice">
@@ -163,7 +163,7 @@
       <blockquote>
         “It’s okay if you don’t have a dream. Just being happy is enough.”
       </blockquote>
-      <img src="Suga.jpg" alt="SUGA">
+      <img src="images/Suga.jpg" alt="SUGA">
     </div>
 
     <div class="member-voice">
@@ -171,7 +171,7 @@
       <blockquote>
         ‘I think there’s a beauty in growing old. It’s the times we’re together that matters, not how we look.”
       </blockquote>
-      <img src="Jhope.jpg" alt="J-hope">
+      <img src="images/Jhope.jpg" alt="J-hope">
     </div>
 
     <div class="member-voice">
@@ -179,7 +179,7 @@
       <blockquote>
         “Go on your path, even if you live for a day.”
       </blockquote>
-      <img src="Jimin.jpg" alt="Jimin">
+      <img src="images/Jimin.jpg" alt="Jimin">
     </div>
 
     <div class="member-voice">
@@ -187,7 +187,7 @@
       <blockquote>
         “When things get hard, stop for awhile and look back and see how far you’ve come. Don’t forget how rewarding it is. You are the most beautiful flower, more than anyone else in this world.”
       </blockquote>
-      <img src="V.jpg" alt="V">
+      <img src="images/V.jpg" alt="V">
     </div>
 
     <div class="member-voice">
@@ -195,7 +195,7 @@
       <blockquote>
         “There is no knowing what will come, but hard work will get us somewhere.”
       </blockquote>
-      <img src="JK.jpg" alt="Jungkook">
+      <img src="images/JK.jpg" alt="Jungkook">
     </div>
 
   </div>
@@ -229,6 +229,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
