--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
   </p>
 </section>
 
+<div class="concert-break">
+  <img src="images/concert-1.jpg" alt="BTS concert moment">
+</div>
 
   <!-- MESSAGES -->
 <section class="section reveal">
@@ -133,7 +136,9 @@
 </div>
 </section>
 
-
+<div class="concert-break">
+  <img src="images/concert-2.jpg" alt="BTS with ARMY at a concert">
+</div>
   
   
  <!-- SEVEN VOICES -->
@@ -229,6 +234,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
