--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
   </p>
 </section>
 
+  <div class="concert-break">
+  <img src="images/bts-concert-2.jpg" alt="ARMY at a concert">
+</div>
 
   <!-- LYRICS THAT FELT LIKE HOME -->
   <section class="section reveal">
@@ -99,7 +102,7 @@
 </section>
 
 <div class="concert-break">
-  <img src="images/concert-1.jpg" alt="BTS concert moment">
+  <img src="images/bts-concert-1.jpg" alt="BTS concert moment">
 </div>
 
   <!-- MESSAGES -->
@@ -136,9 +139,7 @@
 </div>
 </section>
 
-<div class="concert-break">
-  <img src="images/concert-2.jpg" alt="BTS with ARMY at a concert">
-</div>
+
   
   
  <!-- SEVEN VOICES -->
@@ -206,7 +207,9 @@
   </div>
 </section>
 
-
+<div class="concert-break">
+  <img src="images/bts-concert-3.jpg" alt="BTS with ARMY at a concert">
+</div>
 
   <!-- Words from ARMY -->
   <section class="section reveal army-section">
@@ -234,6 +237,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
