--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
   </p>
 </section>
 
+  <div class="concert-break">
+  <img src="images/bts-concert-3.jpg" alt="BTS with ARMY at a concert">
+</div>
+  
   <!-- LYRICS THAT FELT LIKE HOME -->
   <section class="section reveal">
   <h2>Lyrics That Felt Like Home</h2>
@@ -131,6 +135,10 @@
   <p id="quote"></p>
 </div>
 </section>
+
+  <div class="concert-break">
+  <img src="images/bts-concert-1.jpg" alt="BTS with ARMY at a concert">
+</div>
  
  <!-- SEVEN VOICES -->
 <section class="section reveal">
@@ -197,9 +205,10 @@
   </div>
 </section>
 
-<div class="concert-break">
+  <div class="concert-break">
   <img src="images/bts-concert-3.jpg" alt="BTS with ARMY at a concert">
 </div>
+  
 
   <!-- Words from ARMY -->
   <section class="section reveal army-section">
@@ -218,6 +227,9 @@
   </div>
 </section>
 
+<div class="concert-break">
+  <img src="images/bts-concert-3.jpg" alt="BTS with ARMY at a concert">
+</div>
   
   <!-- FOOTER -->
   <footer>
@@ -227,23 +239,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
