--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     including me.
   </p>
 </section>
+
+  <div class="concert-break">
+  <img src="images/BTS-ot71.jpg" alt="BTS life goes on song MV shoot">
+</div>
   
   <!-- LYRICS THAT FELT LIKE HOME -->
   <section class="section reveal">
@@ -97,6 +101,9 @@
   </p>
 </section>
 
+  <div class="concert-break">
+  <img src="images/bts-ot72.jpg" alt="BTS at an award function">
+</div>
 
   <!-- MESSAGES -->
 <section class="section reveal">
@@ -122,6 +129,10 @@
   <p>
     And sometimes, just knowing someone understands is enough.
   </p>
+
+  <div class="concert-break">
+  <img src="images/bts-ot7.jpg" alt="BTS with ARMY at a concert">
+</div>
 
   <p id="quote"><b>Click below when you need reassurance.</b></p>
     <div class="reassurance-wrap">
@@ -197,6 +208,9 @@
   </div>
 </section>
 
+  <div class="concert-break">
+  <img src="images/bts-concert-3.jpg" alt="BTS with ARMY at a concert">
+</div>
   
   <!-- Words from ARMY -->
   <section class="section reveal army-section">
@@ -223,4 +237,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
