--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </section>
 
   <div class="concert-break">
-  <img src="images/bts-ot77.jpg" alt="BTS life goes on song MV shoot">
+  <img src="images/btsot77.jpg" alt="BTS after a show">
 </div>
   
   <!-- LYRICS THAT FELT LIKE HOME -->
@@ -237,6 +237,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
