--- a/index.html
+++ b/index.html
@@ -231,12 +231,13 @@
   
   <!-- FOOTER -->
   <footer>
-    <p>Thank you for being a safe space 💜</p>
+    <p>It was never just music 💜</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
